--- a/WebDesign/reactJS/assignment_1/src/App.css
+++ b/WebDesign/reactJS/assignment_1/src/App.css
@@ -1,13 +1,69 @@
 .base-header {
   text-align: center;
-  background-color: rgb(204, 240, 240);
+  background-color: rgb(164, 75, 238);
   height: auto;
   padding: 10px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  color: aliceblue;
 }
-.view-details-form{
-  
-  display:flex;
+.strength {
+  font-weight: bolder;
+}
+.click-on-viewDetails {
+  padding: 2px;
+  background-color: aqua;
+}
+.view-details-form {
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  width: 50%;
+}
+.employee-row {
+  border: 1px solid rgb(90, 83, 83);
+  display: flex;
+  
+}
+.card-photo {
+  width: 200px;
+  height: 200px;
+}
+.card-photo img {
+  border: 10px solid rgb(163, 155, 155);
+  width: 200px;
+  height: 200px;
+}
+.view-detailas-row {
+  display: flex;
+
+  border: 2px solid black;
+  padding: 20px;
+}
+.main-div-card {
+  display: flex;
+  justify-content: flex-end;
+  width: 30%;
+  align-items: center;
+}
+
+@media screen and (max-width: 820px) {
+  .employee-row {
+    border: 1px solid rgb(90, 83, 83);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card-photo {
+    width: 100px;
+    height: 100px;
+    
+  }
+  .card-photo img {
+    border: 10px solid rgb(163, 155, 155);
+    width: 100px;
+    height: 100px;
+  }
 }
